<resources>
    <string name="app_name">ConcrePav</string>

    <string name="fct_label">Fct do concreto</string>
    <string name="espessura_label">Espessura (cm)</string>
    <string name="projecao_crescimento_label">Projeção de crescimento (%)</string>
    <string name="base_granular">Granular</string>
    <string name="base_solo_cimento">Solo-cimento</string>
    <string name="base_solo_melhorado">Solo melhorado</string>
    <string name="concreto_rolado">Concreto rolado</string>
    <string name="sub_base_label">Tipo de sub-base :</string>
    <string name="ok_button_label">Selecionar</string>
    <string name="tipo_carga_dialog_title">Selecione o tipo de carga</string>
    <string name="tipo_carga_label">Tipo de carga :</string>
    <string name="calcular_button">Calcular</string>
    <string name="tipo_carga_hint">Clique aqui para selecionar</string>
    <string name="dados_frag_title">Dados</string>
    <string name="trafego_frag_title">Tráfego</string>
    <string name="eixo_simples_frag_title">Eixo simples</string>
    <string name="eixo_td_frag_title">Eixo TD</string>
    <string name="eixo_tt_frag_title">Eixo TT</string>
    <string name="carga_por_eixo">Carga por eixo (t)</string>
    <string name="repeticoes">Repetições</string>

    <string name="carga_6">&lt; 6</string>
    <string name="carga_7">7</string>
    <string name="carga_8">8</string>
    <string name="carga_9">9</string>
    <string name="carga_10">10</string>
    <string name="carga_11">11</string>
    <string name="carga_12">12</string>
    <string name="carga_13">13</string>
    <string name="carga_14">14</string>
    <string name="carga_15">15</string>
    <string name="carga_16">16</string>
    <string name="carga_17">17</string>
    <string name="carga_18">18</string>
    <string name="carga_19">19</string>
    <string name="carga_20">20</string>
    <string name="carga_21">21</string>
    <string name="carga_22">22</string>
    <string name="carga_23">23</string>
    <string name="carga_24">24</string>
    <string name="carga_25">25</string>
    <string name="carga_26">26</string>
    <string name="carga_27">27</string>
    <string name="carga_28">28</string>
    <string name="carga_29">29</string>
    <string name="carga_30">30</string>

    <string name="resultados_frag_title">Resultados</string>
    <string name="cbr_label">CBR (%)</string>
    <string name="barras_tranferencia_label">Barras de transferência</string>
    <string name="entrosagem_agregados_label">Entrosagem de agregados</string>
    <string name="transferencia_carga">Transferência de carga:</string>
    <string name="presenca_acostamento_label">Presença de acostamento de concreto:</string>
    <string name="com_acostamento_label">Com acostamento</string>
    <string name="sem_acostamento_label">Sem acostamento</string>
    <string name="espessura_result">%1$d cm</string>
    <string name="voltar">Voltar</string>
    <string name="desc_result">Consumo total por fadiga: %1$.2f%% \nConsumo total por erosão: %2$.2f%%</string>
</resources>
