<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialogListener"
            type="com.hppyft.tcctets.Listener.OpenDialogListener" />

        <variable
            name="calculateListener"
            type="com.hppyft.tcctets.Listener.CalculateListener" />

        <variable
            name="subbaseListener"
            type="com.hppyft.tcctets.Listener.SubbaseListener" />

        <variable
            name="selectedCarga"
            type="int" />

        <variable
            name="isSubbaseSelected"
            type="boolean" />

        <variable
            name="isSubbaseGranular"
            type="boolean" />

        <import type="android.view.View" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fck_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/start_margin"
                android:text="@string/fct_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/fck_field"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inter_field_label_margin"
                android:layout_marginStart="@dimen/inter_field_label_margin"
                android:inputType="numberDecimal"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/fck_label"
                app:layout_constraintLeft_toRightOf="@id/fck_label"
                app:layout_constraintTop_toTopOf="@id/fck_label"
                tools:text="4.5" />

            <TextView
                android:id="@+id/cbr_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inter_fields_margin_horizontal"
                android:layout_marginStart="@dimen/inter_fields_margin_horizontal"
                android:text="@string/cbr_label"
                app:layout_constraintBottom_toBottomOf="@id/fck_field"
                app:layout_constraintLeft_toRightOf="@id/fck_field"
                app:layout_constraintTop_toTopOf="@id/fck_field" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/cbr_field"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inter_field_label_margin"
                android:layout_marginStart="@dimen/inter_field_label_margin"
                android:inputType="numberDecimal"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/cbr_label"
                app:layout_constraintLeft_toRightOf="@id/cbr_label"
                app:layout_constraintTop_toTopOf="@id/cbr_label"
                tools:text="15.5" />

            <TextView
                android:id="@+id/projecao_crescimento_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_horizontal"
                android:text="@string/projecao_crescimento_label"
                app:layout_constraintLeft_toLeftOf="@id/fck_label"
                app:layout_constraintTop_toBottomOf="@id/fck_label" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/projecao_crescimento_field"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inter_field_label_margin"
                android:layout_marginStart="@dimen/inter_field_label_margin"
                android:inputType="numberDecimal"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/projecao_crescimento_label"
                app:layout_constraintLeft_toRightOf="@id/projecao_crescimento_label"
                app:layout_constraintTop_toTopOf="@id/projecao_crescimento_label"
                tools:text="3,5" />

            <TextView
                android:id="@+id/sub_base_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_horizontal"
                android:text="@string/sub_base_label"
                app:layout_constraintLeft_toLeftOf="@id/projecao_crescimento_label"
                app:layout_constraintTop_toBottomOf="@id/projecao_crescimento_label" />

            <RadioGroup
                android:id="@+id/sub_base_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_vertical"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="@id/sub_base_label"
                app:layout_constraintTop_toBottomOf="@id/sub_base_label">

                <RadioButton
                    android:id="@+id/granular_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{() -> subbaseListener.onGranularSelected(granularButton.isChecked())}"
                    android:text="@string/base_granular" />

                <RadioButton
                    android:id="@+id/solo_cimento_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{() -> subbaseListener.onSoloCimentoSelected(soloCimentoButton.isChecked())}"
                    android:text="@string/base_solo_cimento" />

                <RadioButton
                    android:id="@+id/solo_melhorado_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{() -> subbaseListener.onSoloMelhoradoSelected(soloMelhoradoButton.isChecked())}"
                    android:text="@string/base_solo_melhorado" />

                <RadioButton
                    android:id="@+id/concreto_rolado_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{() -> subbaseListener.onConcretoRoladoSelected(concretoRoladoButton.isChecked())}"
                    android:text="@string/concreto_rolado" />
            </RadioGroup>

            <TextView
                android:id="@+id/espessura_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:text="@string/espessura_label"
                android:visibility="@{isSubbaseSelected ? View.VISIBLE : View.GONE}"
                app:layout_constraintLeft_toRightOf="@id/sub_base_label"
                app:layout_constraintTop_toTopOf="@id/sub_base_label" />

            <RadioGroup
                android:id="@+id/espessura_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_vertical"
                android:orientation="vertical"
                android:visibility="@{isSubbaseSelected ? View.VISIBLE : View.GONE}"
                app:layout_constraintLeft_toLeftOf="@id/espessura_label"
                app:layout_constraintTop_toBottomOf="@id/espessura_label">

                <RadioButton
                    android:id="@+id/espesssura_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/espesssura_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/espesssura_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/espesssura_button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{isSubbaseGranular ? View.VISIBLE : View.GONE}" />

            </RadioGroup>

            <TextView
                android:id="@+id/tipo_carga_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_horizontal"
                android:text="@string/tipo_carga_label"
                app:layout_constraintLeft_toLeftOf="@id/sub_base_radio_group"
                app:layout_constraintTop_toBottomOf="@id/sub_base_radio_group" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/tipo_carga_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/start_margin"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginRight="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/inter_fields_margin_vertical"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/tipo_carga_hint"
                android:onClick="@{() -> dialogListener.openDialog(tipoCargaEditText)}"
                app:layout_constraintLeft_toLeftOf="@id/tipo_carga_label"
                app:layout_constraintTop_toBottomOf="@id/tipo_carga_label" />

            <TextView
                android:id="@+id/transferencia_carga_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_vertical"
                android:text="@string/transferencia_carga"
                app:layout_constraintLeft_toLeftOf="@id/tipo_carga_edit_text"
                app:layout_constraintTop_toBottomOf="@id/tipo_carga_edit_text" />

            <RadioGroup
                android:id="@+id/transferencia_carga_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_field_label_margin"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="@id/transferencia_carga_label"
                app:layout_constraintTop_toBottomOf="@id/transferencia_carga_label">

                <RadioButton
                    android:id="@+id/barras_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barras_tranferencia_label" />

                <RadioButton
                    android:id="@+id/entrosagem_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrosagem_agregados_label" />

            </RadioGroup>

            <TextView
                android:id="@+id/presenca_acostamento_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_vertical"
                android:text="@string/presenca_acostamento_label"
                app:layout_constraintLeft_toLeftOf="@id/transferencia_carga_radio_group"
                app:layout_constraintTop_toBottomOf="@id/transferencia_carga_radio_group" />

            <RadioGroup
                android:id="@+id/presenca_acostamento_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_field_label_margin"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@id/presenca_acostamento_label"
                app:layout_constraintTop_toBottomOf="@id/presenca_acostamento_label">

                <RadioButton
                    android:id="@+id/com_acostamento_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/com_acostamento_label" />

                <RadioButton
                    android:id="@+id/sem_acostamento_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_acostamento_label" />
            </RadioGroup>

            <Button
                android:id="@+id/calcular_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_fields_margin_vertical"
                android:onClick="@{() -> calculateListener.calculate()}"
                android:text="@string/calcular_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/presenca_acostamento_radio_group" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>